# qlever-tests

./: .gitignore  CHANGELOG.md  Qleverfile  README.md  compose.yaml  docker-compose.yaml  empty.env  local.env  olympics.env  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
.changeset/: angry-apricots-glow.md  angry-horses-carry.md  better-ends-care.md  blue-cooks-enjoy.md  brave-donkeys-rest.md  calm-mirrors-promise.md  calm-tables-end.md  clean-drinks-drop.md  common-kids-fold.md  config.json  crisp-chicken-kneel.md  crisp-queens-tap.md  crisp-socks-carry.md  eight-paws-dress.md  empty-suits-count.md  every-areas-build.md  every-flies-warn.md  famous-dryers-protect.md  famous-llamas-grin.md  famous-readers-matter.md  fast-singers-join.md  fifty-timers-press.md  fine-jobs-thank.md  five-parrots-rhyme.md  forty-rats-live.md  four-crabs-shop.md  funny-moments-give.md  gentle-peaches-compete.md  giant-ligers-travel.md  giant-turtles-press.md  green-buckets-mix.md  heavy-radios-draw.md  hip-forks-guess.md  honest-otters-sniff.md  humble-sloths-teach.md  itchy-peaches-smile.md  khaki-breads-invent.md  khaki-peaches-type.md  kind-glasses-doubt.md  kind-memes-rescue.md  (+49 more)
.github/: dependabot.yml
.github/workflows/: docker.yaml  playwright.yaml  release.yaml  test.yaml
azure/vm/: README.md  cloud-init.txt
docker/: server.Dockerfile  ui.Dockerfile
docker/common/: generate-qleverfile.sh
redirect/: Dockerfile  README.md  main.ts
tests/: stack.spec.ts
without-docker-stack/: Qleverfile  README.md  pyproject.toml
(+5 files in other folders)
