[tool.poetry]
name = "qlever-cli"
version = "0.1.0"
description = ""
authors = ["Ludovic Muller <ludovicmuller1@gmail.com>"]
readme = "README.md"
packages = [{include = "qlever_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
qlever = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
