[tool.poetry]
name = "qlever-cli"
version = "0.1.0"
description = ""
authors = ["Ludovic Muller <ludovicmuller1@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
qlever = "^0.5.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
